--- a/wkReSolution/version.rc
+++ b/wkReSolution/version.rc
@@ -1,11 +1,7 @@
 
-#define APSTUDIO_READONLY_SYMBOLS
-#include "winres.h"
-#undef APSTUDIO_READONLY_SYMBOLS
-
-VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,3,2,0
- PRODUCTVERSION 0,3,2,0
+1 VERSIONINFO
+ FILEVERSION 0,4,0,0
+ PRODUCTVERSION 0,4,0,0
  FILEOS 0x4L
  FILETYPE 0x2L
 BEGIN
@@ -14,13 +10,13 @@ BEGIN
         BLOCK "040904b0"
         BEGIN
             VALUE "CompanyName", "StepS"
-            VALUE "FileDescription", "Allows to change screen resolution to any value in Worms 2 and zoom/resize the window in windowed mode."
-            VALUE "FileVersion", "0.3.2.0"
-            VALUE "InternalName", "wkReSolutionDD"
+            VALUE "FileDescription", "Allows to change screen resolution to any value in WWP and Worms 2 and zoom/resize the window in windowed mode."
+            VALUE "FileVersion", "0.4.0.0"
+            VALUE "InternalName", "ReSolution HD"
             VALUE "LegalCopyright", "(C) 2014, StepS"
             VALUE "OriginalFilename", "wkReSolution.dll"
             VALUE "ProductName", "ReSolution"
-            VALUE "ProductVersion", "0.3.2.0"
+            VALUE "ProductVersion", "0.4.0.0"
         END
     END
     BLOCK "VarFileInfo"
